k8s/apps/auth-admin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: isidorus
  annotations:
    kompose.cmd: kompose convert -f docker-compose.base.yml -f docker-compose.prod.yml -o k8s/base/
    kompose.version: 1.38.0 (HEAD)
  labels:
    io.kompose.service: auth-admin
  name: auth-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: auth-admin
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.base.yml -f docker-compose.prod.yml -o k8s/base/
        kompose.version: 1.38.0 (HEAD)
      labels:
        io.kompose.service: auth-admin
    spec:
      containers:
        - env:
            - name: REDIS_PORT
              value: "6379"
            - name: POSTGRES_PORT
              value: "5432"
            - name: ALLOWED_HOSTS
              value: '*'
            - name: DATABASE_URL
              value: postgres://postgres:postgres@postgres.isidorus.svc.cluster.local:5432/isidorus
            - name: DEBUG
              value: "False"
            - name: SECRET_KEY
              value: django-insecure-test-key
            - name: SEED_DATA
              value: "true"
            - name: OTEL_EXPORTER_OTLP_ENDPOINT
              value: http://otel-collector.isidorus.svc.cluster.local:4317
          image: docker.io/library/auth-admin:latest
          imagePullPolicy: IfNotPresent
          name: auth-admin
          ports:
            - containerPort: 8000
              protocol: TCP
      restartPolicy: Always
