k8s/apps/deletion-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: isidorus
  annotations:
    kompose.cmd: kompose convert -f docker-compose.base.yml -f docker-compose.prod.yml -o k8s/base/
    kompose.version: 1.38.0 (HEAD)
  labels:
    io.kompose.service: deletion-worker
  name: deletion-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: deletion-worker
  template:
    metadata:
  namespace: isidorus
      annotations:
        kompose.cmd: kompose convert -f docker-compose.base.yml -f docker-compose.prod.yml -o k8s/base/
        kompose.version: 1.38.0 (HEAD)
      labels:
        io.kompose.service: deletion-worker
    spec:
      containers:
        - env:
            - name: AWS_ACCESS_KEY_ID
              value: test
            - name: AWS_REGION
              value: us-east-1
            - name: AWS_SECRET_ACCESS_KEY
              value: testpassword123
            - name: DATABASE_URL
              value: postgres://postgres:postgres@postgres.isidorus.svc.cluster.local:5432/isidorus
            - name: DYNAMODB_ENDPOINT_URL
              value: http://scylla.isidorus.svc.cluster.local:8000
            - name: DYNAMODB_TABLE
              value: scraping_jobs
            - name: IMAGES_BUCKET
              value: isidorus-images
            - name: INPUT_QUEUE_URL
              value: http://elasticmq.isidorus.svc.cluster.local:9324/000000000000/deletion-queue
            - name: S3_ENDPOINT_URL
              value: http://minio.isidorus.svc.cluster.local:9000
            - name: SQS_ENDPOINT_URL
              value: http://elasticmq.isidorus.svc.cluster.local:9324
          image: deletion-worker
          name: deletion-worker
      restartPolicy: Always
