k8s/apps/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: isidorus
  annotations:
    kompose.cmd: kompose convert -f docker-compose.base.yml -f docker-compose.prod.yml -o k8s/base/
    kompose.version: 1.38.0 (HEAD)
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: frontend
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.base.yml -f docker-compose.prod.yml -o k8s/base/
        kompose.version: 1.38.0 (HEAD)
      labels:
        io.kompose.service: frontend
    spec:
      containers:
        - env:
            - name: OTEL_EXPORTER_OTLP_ENDPOINT
              value: http://otel-collector.isidorus.svc.cluster.local:4317
          image: docker.io/library/frontend:latest
          imagePullPolicy: IfNotPresent
          name: frontend
          ports:
            - containerPort: 8000
              protocol: TCP
      restartPolicy: Always
