k8s/apps/image-explainer-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: isidorus
  annotations:
    kompose.cmd: kompose convert -f docker-compose.base.yml -f docker-compose.prod.yml -o k8s/base/
    kompose.version: 1.38.0 (HEAD)
  labels:
    io.kompose.service: image-explainer-worker
  name: image-explainer-worker
spec:
  replicas: 4
  selector:
    matchLabels:
      io.kompose.service: image-explainer-worker
  template:
    metadata:
  namespace: isidorus
      annotations:
        kompose.cmd: kompose convert -f docker-compose.base.yml -f docker-compose.prod.yml -o k8s/base/
        kompose.version: 1.38.0 (HEAD)
      labels:
        io.kompose.service: image-explainer-worker
    spec:
      containers:
        - env:
            - name: AWS_ACCESS_KEY_ID
              valueFrom:
                secretKeyRef:
                  name: k8s-secrets
                  key: AWS_ACCESS_KEY_ID
            - name: AWS_REGION
              value: us-east-1
            - name: AWS_SECRET_ACCESS_KEY
              valueFrom:
                secretKeyRef:
                  name: k8s-secrets
                  key: AWS_SECRET_ACCESS_KEY
            - name: INPUT_QUEUE_URL
              value: http://elasticmq.isidorus.svc.cluster.local:9324/000000000000/image-explainer-queue
            - name: LLM_API_KEY
            - name: LLM_PROVIDER
              value: ollama.isidorus.svc.cluster.local
            - name: OLLAMA_BASE_URL
              value: http://ollama.isidorus.svc.cluster.local:11434
            - name: S3_ENDPOINT_URL
              value: http://minio.isidorus.svc.cluster.local:9000
            - name: SQS_ENDPOINT_URL
              value: http://elasticmq.isidorus.svc.cluster.local:9324
            - name: WRITER_QUEUE_URL
              value: http://elasticmq.isidorus.svc.cluster.local:9324/000000000000/writer-queue
          image: image-explainer-worker
          name: image-explainer-worker
      restartPolicy: Always
