k8s/apps/indexer-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: isidorus
  annotations:
    kompose.cmd: kompose convert -f docker-compose.base.yml -f docker-compose.prod.yml -o k8s/base/
    kompose.version: 1.38.0 (HEAD)
  labels:
    io.kompose.service: indexer-worker
  name: indexer-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: indexer-worker
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.base.yml -f docker-compose.prod.yml -o k8s/base/
        kompose.version: 1.38.0 (HEAD)
      labels:
        io.kompose.service: indexer-worker
    spec:
      containers:
        - env:
            - name: REDIS_PORT
              value: "6379"
            - name: POSTGRES_PORT
              value: "5432"
            - name: AWS_ACCESS_KEY_ID
              valueFrom:
                secretKeyRef:
                  name: k8s-secrets
                  key: AWS_ACCESS_KEY_ID
            - name: AWS_REGION
              value: us-east-1
            - name: AWS_SECRET_ACCESS_KEY
              valueFrom:
                secretKeyRef:
                  name: k8s-secrets
                  key: AWS_SECRET_ACCESS_KEY
            - name: INPUT_QUEUE_URL
              value: http://elasticmq.isidorus.svc.cluster.local:9324/000000000000/indexer-queue
            - name: OPENSEARCH_URL
              value: http://opensearch.isidorus.svc.cluster.local:9200
            - name: SQS_ENDPOINT_URL
              value: http://elasticmq.isidorus.svc.cluster.local:9324
          image: docker.io/library/indexer-worker:latest
          imagePullPolicy: IfNotPresent
          name: indexer-worker
      restartPolicy: Always
