k8s/apps/scraper-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: isidorus
  annotations:
    kompose.cmd: kompose convert -f docker-compose.base.yml -f docker-compose.prod.yml -o k8s/base/
    kompose.version: 1.38.0 (HEAD)
  labels:
    io.kompose.service: scraper-worker
  name: scraper-worker
spec:
  selector:
    matchLabels:
      io.kompose.service: scraper-worker
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.base.yml -f docker-compose.prod.yml -o k8s/base/
        kompose.version: 1.38.0 (HEAD)
      labels:
        io.kompose.service: scraper-worker
    spec:
      containers:
        - env:
            - name: REDIS_PORT
              value: "6379"
            - name: POSTGRES_PORT
              value: "5432"
            - name: AWS_ACCESS_KEY_ID
              valueFrom:
                secretKeyRef:
                  name: k8s-secrets
                  key: AWS_ACCESS_KEY_ID
            - name: AWS_REGION
              value: us-east-1
            - name: AWS_SECRET_ACCESS_KEY
              valueFrom:
                secretKeyRef:
                  name: k8s-secrets
                  key: AWS_SECRET_ACCESS_KEY
            - name: DYNAMODB_ENDPOINT_URL
              value: http://scylla.isidorus.svc.cluster.local:8000
            - name: IMAGE_EXPLAINER_ENABLED
              value: "false"
            - name: IMAGE_EXTRACTOR_ENABLED
              value: "true"
            - name: IMAGE_QUEUE_URL
              value: http://elasticmq.isidorus.svc.cluster.local:9324/000000000000/image-extractor-queue
            - name: INDEXER_QUEUE_URL
              value: http://elasticmq.isidorus.svc.cluster.local:9324/000000000000/indexer-queue
            - name: INPUT_QUEUE_URL
              value: http://elasticmq.isidorus.svc.cluster.local:9324/000000000000/scraper-queue
            - name: PAGE_SUMMARIZER_ENABLED
              value: "true"
            - name: REDIS_HOST
              value: redis.isidorus.svc.cluster.local
            - name: S3_ENDPOINT_URL
              value: http://minio.isidorus.svc.cluster.local:9000
            - name: SQS_ENDPOINT_URL
              value: http://elasticmq.isidorus.svc.cluster.local:9324
            - name: SUMMARIZER_QUEUE_URL
              value: http://elasticmq.isidorus.svc.cluster.local:9324/000000000000/page-summarizer-queue
            - name: WRITER_QUEUE_URL
              value: http://elasticmq.isidorus.svc.cluster.local:9324/000000000000/writer-queue
            - name: OTEL_EXPORTER_OTLP_ENDPOINT
              value: http://otel-collector.isidorus.svc.cluster.local:4317
            - name: OTEL_TRACES_SAMPLER
              value: parentbased_traceidratio
            - name: OTEL_TRACES_SAMPLER_ARG
              value: "0.25"
          image: docker.io/library/scraper-worker:latest
          imagePullPolicy: IfNotPresent
          name: scraper-worker
      restartPolicy: Always
