k8s/apps/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: isidorus
  annotations:
    kompose.cmd: kompose convert -f docker-compose.base.yml -f docker-compose.prod.yml -o k8s/base/
    kompose.version: 1.38.0 (HEAD)
  labels:
    io.kompose.service: api
  name: api
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 8000
  selector:
    io.kompose.service: api
