k8s/apps/auth-admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: isidorus
  annotations:
    kompose.cmd: kompose convert -f docker-compose.base.yml -f docker-compose.prod.yml -o k8s/base/
    kompose.version: 1.38.0 (HEAD)
  labels:
    io.kompose.service: auth-admin
  name: auth-admin
spec:
  ports:
    - name: "8001"
      port: 8001
      targetPort: 8000
  selector:
    io.kompose.service: auth-admin
